# mandelbrot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  config.mk  main.c  performance_test.sh
.github/workflows/: c-compile.yml
src/: canvas.c  canvas.h  colormode.h  generators.c  generators.h  hsv.c  hsv.h  license.h  main.c  pixel.h  png.c  png.h  rendercanvas.h  renderer.c  renderer.h
src/old/: generators.h  hsv.c  hsv.h  main.c  pngtools.c  pngtools.h
